--- a/05-1_louispoulse/index.html
+++ b/05-1_louispoulse/index.html
@@ -90,17 +90,14 @@
                     </div>
                 </header>
                 <div class="main_visual">
-                    <!-- <div class="main_bg"></div> -->
                     <div class="inner">
                         <div class="des">
                             <span>Poul Henningsen</span>
-                            <h2 class="HSF">Design to Shape Light</h2>
-                            <p>루이스폴센은 그저 램프를 디자인하는 데 그치지 않고 <br />빛을 형상화하여 사람들에게 좋은 느낌을 전달해줄 수 있는 <br />실내외 분위기를 만들고자
+                            <h2>Design to<br /><span>Shape Light</span></h2>
+                            <p>루이스폴센은 그저 램프를 디자인하는 데 그치지 않고 <br />빛을 형상화하여 사람들에게 좋은 느낌을 전달해줄 수 있는 실내외 분위기를 만들고자
                                 노력합니다.</p>
                         </div>
-                        <video src="./img/main_visual_video.mp4" autoplay loop>
-                            <div class="line"></div>
-                        </video>
+                        <video src="./img/main_visual_video.mp4" autoplay loop></video>
                     </div>
                 </div>
             </div>
@@ -153,9 +150,7 @@
             </div>
             <div class="b_slider">
                 <div class="itm">
-                    <div class="i_bg">
-                        <figure><img src="./img/best_01_2.png" alt=""></figure>                        
-                    </div>
+                    <figure><img src="./img/best_01_2.png" alt=""></figure>
                     <div class="des">
                         <h3>PH 3/3 황동 오팔 유리 펜던트</h3>
                         <strong>광원 1x60W E27</strong>
@@ -167,9 +162,7 @@
                     </div>
                 </div>
                 <div class="itm">
-                    <div class="i_bg">
-                        <figure><img src="./img/best_02_2.png" alt=""></figure>
-                    </div>
+                    <figure><img src="./img/best_02_2.png" alt=""></figure>
                     <div class="des">
                         <h3>PH 3/3 황동 오팔 유리 펜던트</h3>
                         <strong>광원 1x60W E27</strong>
@@ -181,9 +174,7 @@
                     </div>
                 </div>
                 <div class="itm">
-                    <div class="i_bg">
-                        <figure><img src="./img/best_03_2.png" alt=""></figure>
-                    </div>
+                    <figure><img src="./img/best_03_2.png" alt=""></figure>
                     <div class="des">
                         <h3>PH 3/3 황동 오팔 유리 펜던트</h3>
                         <strong>광원 1x60W E27</strong>
@@ -195,9 +186,7 @@
                     </div>
                 </div>
                 <div class="itm">
-                    <div class="i_bg">
-                        <figure><img src="./img/best_04_2.png" alt=""></figure>
-                    </div>
+                    <figure><img src="./img/best_04_2.png" alt=""></figure>
                     <div class="des">
                         <h3>PH 3/3 황동 오팔 유리 펜던트</h3>
                         <strong>광원 1x60W E27</strong>
@@ -209,9 +198,7 @@
                     </div>
                 </div>
                 <div class="itm">
-                    <div class="i_bg">
-                        <figure><img src="./img/best_05_2.png" alt=""></figure>
-                    </div>
+                    <figure><img src="./img/best_05_2.png" alt=""></figure>
                     <div class="des">
                         <h3>PH 3/3 황동 오팔 유리 펜던트</h3>
                         <strong>광원 1x60W E27</strong>
@@ -222,6 +209,19 @@
                         <a href="#!">VIEW MORE</a>
                     </div>
                 </div>
+                <div class="itm">
+                    <figure><img src="./img/best_06_2.png" alt=""></figure>
+                    <div class="des">
+                        <h3>PH 3/3 황동 오팔 유리 펜던트</h3>
+                        <strong>광원 1x60W E27</strong>
+                        <div class="color">
+                            <span class="c_01"></span>
+                            <span class="c_02"></span>
+                        </div>
+                        <a href="#!">VIEW MORE</a>
+                    </div>
+                </div>
+
             </div>
 
         </section>
@@ -236,11 +236,11 @@
                     </div>
                     <div class="content">
                         <div class="tit">
-                            <h2 class="HSF">WALL LAMP<br /><span class="HSF">COLLECTION</span></h2>
-                            <a href="#!" class="HSF">View All Items</a>
+                            <h2>WALL LAMP<br /><span>COLLECTION</span></h2>
+                            <a href="#!">View All Items</a>
                         </div>
-                        <div class="best">
-                            <h3 class="HSF">BEST PICK</h3>
+                        <div class="pick">
+                            <h3>BEST PICK</h3>
                             <div class="itm_slide">
                                 <figure>
                                     <a href="#!"><img src="./img/col_itm_01.jpg" alt=""></a>
@@ -282,11 +282,11 @@
                 <div class="box bt">
                     <div class="content">
                         <div class="tit">
-                            <h2 class="HSF">PANDANT<br /><span class="HSF">COLLECTION</span></h2>
-                            <a href="#!" class="HSF">View All Items</a>
+                            <h2>PANDANT<br /><span>COLLECTION</span></h2>
+                            <a href="#!">View All Items</a>
                         </div>
-                        <div class="best">
-                            <h3 class="HSF">BEST PICK</h3>
+                        <div class="pick">
+                            <h3>BEST PICK</h3>
                             <div class="itm_slide">
                                 <figure>
                                     <a href="#!"><img src="./img/col_itm_01.jpg" alt=""></a>
