--- a/05-1_louispoulse/index.html
+++ b/05-1_louispoulse/index.html
@@ -144,6 +144,7 @@
                     <div class="txt">
                         <h2>BEST</h2>
                         <h2>SELLER</h2>
+                        <span><a href=""><i class=""></i></a></span>
                         <a href="#!">VIEW ALL</a>
                     </div>
                 </div>
@@ -237,7 +238,7 @@
                     <div class="content">
                         <div class="tit">
                             <h2>WALL LAMP<br /><span>COLLECTION</span></h2>
-                            <a href="#!">View All Items</a>
+                            <a href="#!">VIEW ALL</a>
                         </div>
                         <div class="pick">
                             <h3>BEST PICK</h3>
@@ -283,7 +284,7 @@
                     <div class="content">
                         <div class="tit">
                             <h2>PANDANT<br /><span>COLLECTION</span></h2>
-                            <a href="#!">View All Items</a>
+                            <a href="#!">VIEW ALL</a>
                         </div>
                         <div class="pick">
                             <h3>BEST PICK</h3>
@@ -331,8 +332,33 @@
                 </div>
             </div>
         </section>
+        <!-- designer -->
+        <section class="designer">
+            <div class="tit">
+                <h2>LOUIS <br />POULSEN<br />DESIGNER</h2>
+                <a href="#!">VIEW<span class="d_arrow"></span></a>
+            </div>
+            <div class="photo_s">
+                <div class="dp_slide photo_1">
+                    <figure><img src="./img/designer_01.jpg" alt=""></figure>
+                    <figure><img src="./img/designer_02.jpg" alt=""></figure>
+                    <figure><img src="./img/designer_03.jpg" alt=""></figure>
+                    <figure><img src="./img/designer_04.jpg" alt=""></figure>
+                    <figure><img src="./img/designer_05.jpg" alt=""></figure>
+                </div>
+                <div class="dp_slide photo_2">
+                    <figure><img src="./img/designer_05.jpg" alt=""></figure>
+                    <figure><img src="./img/designer_06.jpg" alt=""></figure>
+                    <figure><img src="./img/designer_07.jpg" alt=""></figure>
+                    <figure><img src="./img/designer_08.jpg" alt=""></figure>
+                    <figure><img src="./img/designer_01.jpg" alt=""></figure>
+                </div>
+            </div>
+        </section>
+        <!-- magazine -->
+        <section class="magazine">
 
-
+        </section>
         <main>
 
         </main>
