--- a/05-1_louispoulse/index.html
+++ b/05-1_louispoulse/index.html
@@ -381,7 +381,6 @@
             <!-- magazine -->
             <section class="magazine">
                 <h2>MAGAZINE</h2>
-                <p>이 이야기가 영감이 되기를 바랍니다</p>
                 <div class="container">
                     <figure>
                         <a href="#!">
@@ -415,7 +414,7 @@
         </main>
         <footer>
             <div class="container">
-                <figure><img src="./img/logo.png" alt=""></figure>
+                <figure><img src="./img/logo_w.png" alt=""></figure>
 
                 <div class="center">
                     <dl class="top">
