--- a/11_doosi/public/index.html
+++ b/11_doosi/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/assets/images/favicon.png" />
+  <link rel="icon" href="%PUBLIC_URL%/assets/img/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Web site created using create-react-app" />
   <title>두시</title>
