--- a/05-1_louispoulse/index.html
+++ b/05-1_louispoulse/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>louispoulsen</title>
+    <link href="./img/favicon.png" rel="shortcut icon" type="image/x-icon">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/slick.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/mobile.css">
 
     <script src="./js/jquery-1.12.4.min.js"></script>
     <script src="./js/slick.min.js"></script>
@@ -152,6 +154,9 @@
                             <a href="#!">VIEW ALL</a>
                         </div>
                     </div>
+                    <div class="b_slider_ar">
+                        <img src="./img/arrow.png" alt="">
+                    </div>
                 </div>
                 <div class="b_slider">
                     <div class="itm">
@@ -162,6 +167,8 @@
                             <div class="color">
                                 <span class="c_01"></span>
                                 <span class="c_02"></span>
+                                <span class="c_04"></span>
+                                <span class="c_06"></span>
                             </div>
                             <a href="#!">VIEW MORE</a>
                         </div>
@@ -172,8 +179,8 @@
                             <h3>PH 3/3 황동 오팔 유리 펜던트</h3>
                             <strong>광원 1x60W E27</strong>
                             <div class="color">
-                                <span class="c_01"></span>
-                                <span class="c_02"></span>
+                                <span class="c_03"></span>
+                                <span class="c_04"></span>
                             </div>
                             <a href="#!">VIEW MORE</a>
                         </div>
@@ -186,6 +193,7 @@
                             <div class="color">
                                 <span class="c_01"></span>
                                 <span class="c_02"></span>
+                                <span class="c_05"></span>
                             </div>
                             <a href="#!">VIEW MORE</a>
                         </div>
@@ -196,6 +204,7 @@
                             <h3>PH 3/3 황동 오팔 유리 펜던트</h3>
                             <strong>광원 1x60W E27</strong>
                             <div class="color">
+                                <span class="c_03"></span>
                                 <span class="c_01"></span>
                                 <span class="c_02"></span>
                             </div>
@@ -208,8 +217,8 @@
                             <h3>PH 3/3 황동 오팔 유리 펜던트</h3>
                             <strong>광원 1x60W E27</strong>
                             <div class="color">
-                                <span class="c_01"></span>
-                                <span class="c_02"></span>
+                                <span class="c_04"></span>
+                                <span class="c_06"></span>
                             </div>
                             <a href="#!">VIEW MORE</a>
                         </div>
@@ -220,14 +229,13 @@
                             <h3>PH 3/3 황동 오팔 유리 펜던트</h3>
                             <strong>광원 1x60W E27</strong>
                             <div class="color">
-                                <span class="c_01"></span>
-                                <span class="c_02"></span>
+                                <span class="c_03"></span>
+                                <span class="c_05"></span>
                             </div>
                             <a href="#!">VIEW MORE</a>
                         </div>
                     </div>
                 </div>
-
             </section>
             <!-- col -->
             <section class="col">
@@ -293,31 +301,31 @@
                                 <h3>BEST PICK</h3>
                                 <div class="itm_slide itm_S_02">
                                     <figure>
-                                        <a href="#!"><img src="./img/col_itm_01.jpg" alt=""></a>
+                                        <a href="#!"><img src="./img/col_itm_06.jpg" alt=""></a>
                                         <p>PH 2/1 월</p>
                                         <strong>130,000</strong>
                                         <a href="#!" class="to_cart">ADD CART</a>
                                     </figure>
                                     <figure>
-                                        <a href="#!"><img src="./img/col_itm_02.jpg" alt=""></a>
+                                        <a href="#!"><img src="./img/col_itm_07.jpg" alt=""></a>
                                         <p>NJP 월</p>
                                         <strong>95,000</strong>
                                         <a href="#!" class="to_cart">ADD CART</a>
                                     </figure>
                                     <figure>
-                                        <a href="#!"><img src="./img/col_itm_03.jpg" alt=""></a>
+                                        <a href="#!"><img src="./img/col_itm_08.jpg" alt=""></a>
                                         <p>VL Studio Wall</p>
                                         <strong>110,000</strong>
                                         <a href="#!" class="to_cart">ADD CART</a>
                                     </figure>
                                     <figure>
-                                        <a href="#!"><img src="./img/col_itm_04.jpg" alt=""></a>
+                                        <a href="#!"><img src="./img/col_itm_09.jpg" alt=""></a>
                                         <p>LP 그랜드 월</p>
                                         <strong>130,000</strong>
                                         <a href="#!" class="to_cart">ADD CART</a>
                                     </figure>
                                     <figure>
-                                        <a href="#!"><img src="./img/col_itm_05.jpg" alt=""></a>
+                                        <a href="#!"><img src="./img/col_itm_10.jpg" alt=""></a>
                                         <p>플린트 월</p>
                                         <strong>125,000</strong>
                                         <a href="#!" class="to_cart">ADD CART</a>
@@ -370,13 +378,13 @@
                             <figure><img src="./img/designer_07.jpg" alt=""></figure>
                         </a>
                         <a href="#!">
-                            <figure><img src="./img/designer_01.jpg" alt=""></figure>
+                            <figure><img src="./img/designer_09.jpg" alt=""></figure>
                         </a>
                         <a href="#!">
                             <figure><img src="./img/designer_08.jpg" alt=""></figure>
                         </a>
                         <a href="#!">
-                            <figure><img src="./img/designer_05.jpg" alt=""></figure>
+                            <figure><img src="./img/designer_10.jpg" alt=""></figure>
                         </a>
                     </div>
                 </div>
